--- a/src/main/resources/twitter4j.properties
+++ b/src/main/resources/twitter4j.properties
@@ -4,3 +4,5 @@ oauth.consumerKey=CBTEZnJ9sSJHK94FhZQN7V5zj
 oauth.consumerSecret=HNPqXwFBAn908bzsZck0cYMtwyNR4PqXflRiId7PI8fvksJnHi
 oauth.accessToken=905131173021720576-fTRI9Z2PKhtaAseD406kJx884qEbciv
 oauth.accessTokenSecret=Tmdo4JGZhvsmilqLJDsqIdbsOPaCajQw9AjvPgFvoU2pk
+
+includeRTs=false
