--- a/src/main/resources/twitter4j.properties
+++ b/src/main/resources/twitter4j.properties
@@ -1,8 +1,8 @@
 
 debug=true
-oauth.consumerKey=CBTEZnJ9sSJHK94FhZQN7V5zj
-oauth.consumerSecret=HNPqXwFBAn908bzsZck0cYMtwyNR4PqXflRiId7PI8fvksJnHi
-oauth.accessToken=905131173021720576-fTRI9Z2PKhtaAseD406kJx884qEbciv
-oauth.accessTokenSecret=Tmdo4JGZhvsmilqLJDsqIdbsOPaCajQw9AjvPgFvoU2pk
+oauth.consumerKey=<your consumer key>
+oauth.consumerSecret=<your consumer secret>
+oauth.accessToken=<your access token>
+oauth.accessTokenSecret=<your access secret>
 
 includeRTs=false
